--- a/index.html
+++ b/index.html
@@ -2,70 +2,73 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <!-- 1. 定义内容安全策略 (CSP) -->
-    <!-- 'self' 允许加载同源资源, 'unsafe-inline' 允许内联样式和脚本 (对于 onclick 属性是必需的) -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';">
-
     <title>VPN 控制器 (udp2raw + WireGuard)</title>
     <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; padding: 10px; }
-        h2 {
-            text-align: center; /* 标题居中 */
-            font-size: 24px;
-            font-weight: 300; /* 使用更细的字体 */
-            color: #333;
-            /* 应用下面的动画效果 */
-            animation: glow 2.5s ease-in-out infinite alternate;
-        }
-        .control-button {
-            font-size: 16px; /* 增大字体 */
-            padding: 10px 20px; /* 增加内边距，让按钮更大 */
-            margin-right: 10px; /* 增加按钮间的间距 */
-            border-radius: 8px; /* 圆角效果 */
-            border: 1px solid #ccc;
-            cursor: pointer;
-        }
-        .description {
-            font-size: 12px;
-            color: #6c757d; /* 灰色文字 */
-            margin-top: 5px;
-            margin-bottom: 15px;
-            word-wrap: break-word; /* 允许长单词或URL换行 */
-        }
-        code {
-            background-color: #f1f1f1;
-            padding: 2px 4px;
-            border-radius: 4px;
-        }
-        .start-button { background-color: #d4edda; color: #155724; } /* 绿色系，表示启动 */
-        .stop-button { background-color: #f8d7da; color: #721c24; } /* 红色系，表示停止 */
-
-        /* 定义发光动画 */
-        @keyframes glow {
-            from {
-                text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6;
-            }
-            to {
-                text-shadow: 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #0073e6, 0 0 25px #0073e6;
-            }
-        }
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; padding: 10px; background-color: #f8f9fa; margin: 0; }
+        .tab-nav { display: flex; background-color: #e9ecef; border-bottom: 1px solid #dee2e6; }
+        .tab-button { padding: 10px 20px; cursor: pointer; border: none; background-color: transparent; font-size: 16px; }
+        .tab-button.active { background-color: #fff; border-top: 2px solid #007bff; }
+        .tab-content { display: none; padding: 20px; }
+        .tab-content.active { display: block; }
+        h2 { text-align: center; font-size: 24px; font-weight: 300; color: #333; animation: glow 2.5s ease-in-out infinite alternate; margin-top: 0; }
+        .controls-container { display: flex; align-items: center; justify-content: center; gap: 15px; margin-bottom: 20px; }
+        #node-selector, .control-button, .settings-table input { font-size: 14px; padding: 8px 12px; border-radius: 6px; border: 1px solid #ccc; }
+        .start-button { background-color: #d4edda; color: #155724; }
+        .stop-button { background-color: #f8d7da; color: #721c24; }
+        #terminal-container { border: 1px solid #ddd; border-radius: 8px; overflow: hidden; }
+        .settings-table { width: 100%; border-collapse: collapse; margin-top: 15px; }
+        .settings-table th, .settings-table td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+        .settings-table th { background-color: #f2f2f2; }
+        .settings-table input { width: 95%; }
+        .action-button { padding: 5px 10px; font-size: 12px; cursor: pointer; border-radius: 4px; border: 1px solid; }
+        .delete-btn { background-color: #f8d7da; color: #721c24; border-color: #f5c6cb; }
+        .add-btn, .save-btn { background-color: #d1ecf1; color: #0c5460; border-color: #bee5eb; margin-top: 15px; }
+        @keyframes glow { from { text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6; } to { text-shadow: 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #0073e6, 0 0 25px #0073e6; } }
     </style>
 </head>
 <body>
-<h2>VPN 控制器</h2>
-<p class="description">
-    本工具可代替手动运行: <code>sudo ./udp2raw_mp_mac -c -l 127.0.0.1:29999 -r 64.69.34.176:39001 -k "9OtvxqVF4kT2aGAJ" --raw-mode faketcp --cipher-mode xor</code>
-</p>
-<button class="control-button start-button" onclick="startVPN()">
-    🚀 启动 udp2raw + WireGuard
-</button>
-<button class="control-button stop-button" onclick="stopVPN()">
-    🛑 停止 udp2raw + WireGuard
-</button>
 
-<!-- xterm.js 将会挂载到这个 div 上 -->
-<div id="terminal" style="width: 100%; height: 450px; margin-top: 10px;"></div>
+<div class="tab-nav">
+    <button class="tab-button active" onclick="showTab('connect')">🔗 连接</button>
+    <button class="tab-button" onclick="showTab('settings')">⚙️ 节点设置</button>
+</div>
+
+<!-- 连接页面 -->
+<div id="connect-tab" class="tab-content active">
+    <h2>VPN 控制器</h2>
+    <div class="controls-container">
+        <select id="node-selector"></select>
+        <div id="start-buttons-container"></div>
+        <button class="control-button stop-button" onclick="stopVPN()">🛑 停止连接</button>
+    </div>
+    <div id="terminal-container">
+        <div id="terminal" style="width: 100%; height: 450px;"></div>
+    </div>
+</div>
+
+<!-- 设置页面 -->
+<div id="settings-tab" class="tab-content">
+    <h2>节点配置</h2>
+    <p>在这里添加、删除或修改你的服务器节点。修改后请务必点击“保存所有更改”。</p>
+    <table class="settings-table">
+        <thead>
+            <tr>
+                <th>节点名称</th>
+                <th>IPv4 地址:端口</th>
+                <th>IPv6 地址:端口</th>
+                <th>连接密码</th>
+                <th>操作</th>
+            </tr>
+        </thead>
+        <tbody id="nodes-table-body">
+            <!-- 节点将由 JS 动态插入 -->
+        </tbody>
+    </table>
+    <button class="control-button add-btn" onclick="addNewNodeRow()">➕ 添加新节点</button>
+    <button class="control-button save-btn" onclick="saveConfig()">💾 保存所有更改</button>
+</div>
 
 <script src="renderer.js"></script>
 </body>
