--- a/index.html
+++ b/index.html
@@ -7,63 +7,29 @@
     <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; padding: 10px; background-color: #f0f2f5; margin: 0; }
-        .visually-hidden {
-            position: absolute;
-            width: 1px;
-            height: 1px;
-            padding: 0;
-            margin: -1px;
-            overflow: hidden;
-            clip: rect(0, 0, 0, 0);
-            white-space: nowrap;
-            border: 0;
-        }
+        .visually-hidden { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0; }
         .tab-nav { display: flex; background-color: #e9ecef; border-bottom: 1px solid #dee2e6; }
         .tab-button { padding: 10px 20px; cursor: pointer; border: none; background-color: transparent; font-size: 16px; color: #6c757d; }
         .tab-button.active { background-color: #f8f9fa; border-top: 3px solid #007bff; color: #007bff; font-weight: 500; }
         .tab-content { display: none; padding: 20px; background-color: #f8f9fa; }
         .tab-content.active { display: block; }
-        h2 { text-align: center; font-size: 24px; font-weight: 300; color: #333; animation: glow 2.5s ease-in-out infinite alternate; margin-top: 0; }
+        h2, h3 { text-align: center; font-weight: 300; color: #333; }
+        h2 { font-size: 24px; animation: glow 2.5s ease-in-out infinite alternate; margin-top: 0; }
+        h3 { font-size: 20px; margin-top: 25px; border-bottom: 1px solid #e0e0e0; padding-bottom: 10px; }
         .controls-container { display: flex; align-items: center; justify-content: center; gap: 15px; margin-bottom: 20px; }
-        #node-selector, .settings-table input { font-size: 14px; padding: 8px 12px; border-radius: 6px; border: 1px solid #ccc; background-color: #fff; }
+        #node-selector, .settings-table input, #network-interface-selector { font-size: 14px; padding: 8px 12px; border-radius: 6px; border: 1px solid #ccc; background-color: #fff; }
         #terminal-container { border: 1px solid #ddd; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0,0,0,0.05); }
+        .settings-section { margin-bottom: 20px; }
         .settings-table { width: 100%; border-collapse: collapse; margin-top: 15px; }
         .settings-table th, .settings-table td { border: 1px solid #ddd; padding: 8px; text-align: left; }
         .settings-table th { background-color: #f2f2f2; }
         .settings-table input { width: 95%; }
 
-        /* --- 统一的凹凸按钮样式 (已清理) --- */
-        .control-button {
-            font-size: 14px;
-            padding: 8px 16px;
-            border-radius: 8px;
-            border: 1px solid rgba(0, 0, 0, 0.1);
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.15s ease-out;
-            text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5);
-            box-shadow:
-                0 2px 2px rgba(0, 0, 0, 0.15),
-                inset 0 1px 0 rgba(255, 255, 255, 0.3);
-        }
-        .control-button:hover {
-            transform: translateY(-2px);
-            box-shadow:
-                0 4px 5px rgba(0, 0, 0, 0.2),
-                inset 0 1px 0 rgba(255, 255, 255, 0.3);
-        }
-        .control-button:active {
-            transform: translateY(1px);
-            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
-        }
-        .control-button:disabled {
-            background-color: #e9ecef !important;
-            color: #adb5bd !important;
-            cursor: not-allowed;
-            transform: translateY(0);
-            box-shadow: none;
-            border-color: #ced4da;
-        }
+        /* --- 统一的凹凸按钮样式 --- */
+        .control-button { font-size: 14px; padding: 8px 16px; border-radius: 8px; border: 1px solid rgba(0, 0, 0, 0.1); font-weight: 600; cursor: pointer; transition: all 0.15s ease-out; text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5); box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), inset 0 1px 0 rgba(255, 255, 255, 0.3); }
+        .control-button:hover { transform: translateY(-2px); box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.3); }
+        .control-button:active { transform: translateY(1px); box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2); }
+        .control-button:disabled { background-color: #e9ecef !important; color: #adb5bd !important; cursor: not-allowed; transform: translateY(0); box-shadow: none; border-color: #ced4da; }
 
         /* --- 按钮颜色 --- */
         .start-button { background-color: #c8e6c9; color: #255d3a; border-color: #a5d6a7; }
@@ -78,7 +44,7 @@
 
 <div class="tab-nav">
     <button class="tab-button active" onclick="showTab('connect')">🔗 连接</button>
-    <button class="tab-button" onclick="showTab('settings')">⚙️ 节点设置</button>
+    <button class="tab-button" onclick="showTab('settings')">⚙️ 设置</button>
 </div>
 
 <!-- 连接页面 -->
@@ -97,24 +63,34 @@
 
 <!-- 设置页面 -->
 <div id="settings-tab" class="tab-content">
-    <h2>节点配置</h2>
-    <p>在这里添加、删除或修改你的服务器节点。修改后请务必点击“保存所有更改”。</p>
-    <table class="settings-table">
-        <thead>
-            <tr>
-                <th>节点名称</th>
-                <th>IPv4 地址:端口</th>
-                <th>IPv6 地址:端口</th>
-                <th>连接密码</th>
-                <th>操作</th>
-            </tr>
-        </thead>
-        <tbody id="nodes-table-body">
-            <!-- 节点将由 JS 动态插入 -->
-        </tbody>
-    </table>
-    <button class="control-button add-btn" onclick="addNewNodeRow()">➕ 添加新节点</button>
-    <button class="control-button save-btn" onclick="saveConfig()">💾 保存所有更改</button>
+    <div class="settings-section">
+        <h3>全局设置</h3>
+        <label for="network-interface-selector">指定网络接口 (Mac):</label>
+        <select id="network-interface-selector"></select>
+    </div>
+
+    <div class="settings-section">
+        <h3>节点配置</h3>
+        <p>在这里添加、删除或修改你的服务器节点。</p>
+        <table class="settings-table">
+            <thead>
+                <tr>
+                    <th>节点名称</th>
+                    <th>IPv4 地址:端口</th>
+                    <th>IPv6 地址:端口</th>
+                    <th>连接密码</th>
+                    <th>操作</th>
+                </tr>
+            </thead>
+            <tbody id="nodes-table-body">
+                <!-- 节点将由 JS 动态插入 -->
+            </tbody>
+        </table>
+        <button class="control-button add-btn" onclick="addNewNodeRow()">➕ 添加新节点</button>
+    </div>
+    
+    <hr>
+    <button class="control-button save-btn" onclick="saveConfig()" style="width: 100%; padding-top: 12px; padding-bottom: 12px; font-size: 16px;">💾 保存所有更改</button>
 </div>
 
 <script src="renderer.js"></script>
